Add mappers for API with test and start of implementation of controller
