# src/main/java/com/getdrop/recipe/usecase/recipe/model/Ingredient.java
@@ -1,0 +1,18 @@
+package com.getdrop.recipe.usecase.recipe.model;
+
+import lombok.Builder;
+import lombok.NonNull;
+import lombok.Value;
+
+@Value
+@Builder(toBuilder = true)
+public class Ingredient {
+
+  @NonNull
+  String name;
+
+  int quantity;
+
+  @NonNull
+  String units;
+}
